feat: add user model, migrations, and seed data
- Updated package.json to include Jest for testing and added a test script.
- Created a configuration file for database connection using environment variables.
- Added migration for creating Users table with necessary fields.
- Created a seeder to insert an admin user with hashed password.
- Implemented user tests for registration and login endpoints using Supertest.

--- a/.sequelizerc
+++ b/.sequelizerc
@@ -1,1 +1,9 @@
 // .sequelizerc
+const path = require('path');
+
+module.exports = {
+  'config': path.resolve('src/config', 'config.js'),           // path to config used by CLI
+  'models-path': path.resolve('src/models'),                   // your models folder
+  'seeders-path': path.resolve('src/seeders'),        // custom seeders path
+  'migrations-path': path.resolve('src/migrations'),  // custom migrations path
+};
