--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "server.js",
   "scripts": {
     "start": "node server.js",
-    "dev": "nodemon server.js"
+    "dev": "nodemon server.js",
+    "test": "NODE_ENV=test jest --runInBand"
   },
   "keywords": [
     "express",
@@ -33,6 +34,9 @@
     "winston": "^3.13.0"
   },
   "devDependencies": {
-    "nodemon": "^3.1.0"
+    "jest": "^30.0.2",
+    "nodemon": "^3.1.0",
+    "sequelize-cli": "^6.6.3",
+    "supertest": "^7.1.1"
   }
 }
