--- a/package.json
+++ b/package.json
@@ -30,6 +30,8 @@
     "morgan": "^1.10.0",
     "mysql2": "^3.9.1",
     "sequelize": "^6.37.0",
+    "swagger-jsdoc": "^6.2.8",
+    "swagger-ui-express": "^5.0.1",
     "uuid": "^9.0.1",
     "winston": "^3.13.0"
   },
